Web Inspector: Jumping from Computed to Styles should select property https://bugs.webkit.org/show_bug.cgi?id=192198
Reviewed by Devin Rousso.

* UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css:
(.spreadsheet-style-declaration-editor .property.highlighted): Deleted.
(@keyframes style-property-highlight): Deleted.
* UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.js:
(WI.SpreadsheetCSSStyleDeclarationEditor.prototype.highlightProperty):
Remove unnecessary `__propertyView` property.

* UserInterface/Views/SpreadsheetStyleProperty.js:
(WI.SpreadsheetStyleProperty.prototype.detached):
(WI.SpreadsheetStyleProperty.prototype.highlight): Deleted.


Canonical link: https://commits.webkit.org/206906@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238762 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
+++ b/Source/WebInspectorUI/UserInterface/Views/SpreadsheetCSSStyleDeclarationEditor.css
@@ -145,14 +145,6 @@
     color: hsl(0, 0%, 50%) !important;
 }
 
-.spreadsheet-style-declaration-editor .property.highlighted {
-    animation: style-property-highlight 2s;
-}
-
-@keyframes style-property-highlight {
-    from { background-color: yellow; }
-}
-
 .spreadsheet-style-declaration-editor .property:not(.disabled) .token-link {
     color: var(--syntax-highlight-link-color);
 }
